--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,8 +1,9 @@
 name: Generate Datas
 
 on:
-  schedule: # execute every 5 hours
-    - cron: "* */5 * * *"
+    schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 5,17 * * *'
   workflow_dispatch:
 
 jobs:
