--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,9 +1,8 @@
 name: Generate Datas
 
 on:
-    schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '30 5,17 * * *'
+     schedule: # execute every 12 hours
+    - cron: "* *12 * * *"
   workflow_dispatch:
 
 jobs:
